[gd_scene load_steps=19 format=3 uid="uid://ci612oibes6a"]

[ext_resource type="Texture2D" uid="uid://d4i5a32byx1e0" path="res://2D Graphics/Temp Title Screen.png" id="1_02r06"]
[ext_resource type="Script" path="res://Scripts/Start Menu.gd" id="2_shbmy"]
[ext_resource type="AudioStream" uid="uid://ckbwi2xs7qluq" path="res://Audio/Sound Effects/Test Click.wav" id="3_demdx"]
[ext_resource type="Script" path="res://Scripts/License_Window.gd" id="4_fop6l"]
[ext_resource type="Script" path="res://addons/markdownlabel/markdownlabel.gd" id="5_u5yar"]
[ext_resource type="Script" path="res://addons/markdownlabel/header_formats/h1_format.gd" id="6_chl04"]
[ext_resource type="Script" path="res://addons/markdownlabel/header_formats/h2_format.gd" id="7_sdsc6"]
[ext_resource type="Script" path="res://addons/markdownlabel/header_formats/h3_format.gd" id="8_e6ie5"]
[ext_resource type="Script" path="res://addons/markdownlabel/header_formats/h4_format.gd" id="9_u5xvo"]
[ext_resource type="Script" path="res://addons/markdownlabel/header_formats/h5_format.gd" id="10_l4or5"]
[ext_resource type="Script" path="res://addons/markdownlabel/header_formats/h6_format.gd" id="11_iq8y4"]
[ext_resource type="Script" path="res://Scripts/ReadMe_Window.gd" id="12_ndxgy"]

[sub_resource type="Resource" id="Resource_4v1gk"]
script = ExtResource("6_chl04")
font_size = 2.285
is_bold = false
is_italic = false
is_underlined = false
override_font_color = false
font_color = Color(1, 1, 1, 1)

[sub_resource type="Resource" id="Resource_t5nu5"]
resource_local_to_scene = true
script = ExtResource("7_sdsc6")
font_size = 1.714
is_bold = false
is_italic = false
is_underlined = false
override_font_color = false
font_color = Color(1, 1, 1, 1)

[sub_resource type="Resource" id="Resource_4sg1e"]
resource_local_to_scene = true
script = ExtResource("8_e6ie5")
font_size = 1.428
is_bold = false
is_italic = false
is_underlined = false
override_font_color = false
font_color = Color(1, 1, 1, 1)

[sub_resource type="Resource" id="Resource_6amxf"]
resource_local_to_scene = true
script = ExtResource("9_u5xvo")
font_size = 1.142
is_bold = false
is_italic = false
is_underlined = false
override_font_color = false
font_color = Color(1, 1, 1, 1)

[sub_resource type="Resource" id="Resource_yxrjn"]
resource_local_to_scene = true
script = ExtResource("10_l4or5")
font_size = 1.0
is_bold = false
is_italic = false
is_underlined = false
override_font_color = false
font_color = Color(1, 1, 1, 1)

[sub_resource type="Resource" id="Resource_t42cg"]
resource_local_to_scene = true
script = ExtResource("11_iq8y4")
font_size = 0.857
is_bold = false
is_italic = false
is_underlined = false
override_font_color = false
font_color = Color(1, 1, 1, 1)

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="StartScreen" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_02r06")
expand_mode = 2
stretch_mode = 5
script = ExtResource("2_shbmy")

[node name="StartMenu" type="VBoxContainer" parent="StartScreen"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2

[node name="PlayButton" type="Button" parent="StartScreen/StartMenu"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../OptionsButton")
focus_next = NodePath("../OptionsButton")
mouse_default_cursor_shape = 2
theme_override_colors/font_hover_color = Color(0, 1, 0, 1)
theme_override_colors/font_focus_color = Color(0, 1, 0, 1)
theme_override_colors/font_color = Color(0, 1, 0, 1)
text = "Play"
expand_icon = true

[node name="HSeparator" type="HSeparator" parent="StartScreen/StartMenu"]
layout_mode = 2

[node name="OptionsButton" type="Button" parent="StartScreen/StartMenu"]
layout_mode = 2
focus_neighbor_top = NodePath("../PlayButton")
focus_neighbor_bottom = NodePath("../CreditsButton")
focus_next = NodePath("../CreditsButton")
focus_previous = NodePath("../PlayButton")
mouse_default_cursor_shape = 2
text = "Options"

[node name="CreditsButton" type="Button" parent="StartScreen/StartMenu"]
layout_mode = 2
focus_neighbor_top = NodePath("../OptionsButton")
focus_neighbor_bottom = NodePath("../LicenseButton")
focus_next = NodePath("../LicenseButton")
focus_previous = NodePath("../OptionsButton")
mouse_default_cursor_shape = 2
text = "Credits"

[node name="LicenseButton" type="Button" parent="StartScreen/StartMenu"]
layout_mode = 2
focus_neighbor_top = NodePath("../CreditsButton")
focus_neighbor_bottom = NodePath("../ReadMeButton")
focus_next = NodePath("../ReadMeButton")
focus_previous = NodePath("../CreditsButton")
text = "License"

[node name="ReadMeButton" type="Button" parent="StartScreen/StartMenu"]
layout_mode = 2
focus_neighbor_top = NodePath("../LicenseButton")
focus_neighbor_bottom = NodePath("../QuitButton")
focus_next = NodePath("../QuitButton")
focus_previous = NodePath("../LicenseButton")
text = "ReadMe"

[node name="HSeparator2" type="HSeparator" parent="StartScreen/StartMenu"]
layout_mode = 2

[node name="QuitButton" type="Button" parent="StartScreen/StartMenu"]
layout_mode = 2
focus_neighbor_top = NodePath("../ReadMeButton")
focus_previous = NodePath("../ReadMeButton")
mouse_default_cursor_shape = 2
theme_override_colors/font_hover_color = Color(1, 0, 0, 1)
theme_override_colors/font_focus_color = Color(1, 0, 0, 1)
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "Quit"

[node name="DummyButton" type="Button" parent="StartScreen/StartMenu"]
visible = false
layout_mode = 2
text = "This button should not be visible"

[node name="FadeRect" type="ColorRect" parent="StartScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="StartScreen"]
stream = ExtResource("3_demdx")

[node name="LicenseWindow" type="Window" parent="StartScreen"]
title = "License"
initial_position = 2
size = Vector2i(800, 600)
visible = false
theme_override_constants/resize_margin = 50
script = ExtResource("4_fop6l")

[node name="MarginContainer" type="MarginContainer" parent="StartScreen/LicenseWindow"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10

[node name="MarkdownLabel" type="RichTextLabel" parent="StartScreen/LicenseWindow/MarginContainer"]
layout_mode = 2
bbcode_enabled = true
text = "According to all known laws of aviation, there is no way a bee should be able to fly. Its wings are too small to get its fat little body off the ground. The bee, of course, flies anyway, because bees don't care what humans think is impossible."
script = ExtResource("5_u5yar")
markdown_text = "According to all known laws of aviation, there is no way a bee should be able to fly. Its wings are too small to get its fat little body off the ground. The bee, of course, flies anyway, because bees don't care what humans think is impossible."
h1 = SubResource("Resource_4v1gk")
h2 = SubResource("Resource_t5nu5")
h3 = SubResource("Resource_4sg1e")
h4 = SubResource("Resource_6amxf")
h5 = SubResource("Resource_yxrjn")
h6 = SubResource("Resource_t42cg")
enable_checkbox_clicks = false

[node name="LicenseWindow" type="Window" parent="StartScreen/LicenseWindow"]
auto_translate_mode = 1
title = "License"
initial_position = 2
size = Vector2i(800, 600)
visible = false
theme_override_constants/resize_margin = 50
script = ExtResource("4_fop6l")

[node name="MarginContainer" type="MarginContainer" parent="StartScreen/LicenseWindow/LicenseWindow"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10

[node name="MarkdownLabel" type="RichTextLabel" parent="StartScreen/LicenseWindow/LicenseWindow/MarginContainer"]
layout_mode = 2
bbcode_enabled = true
text = "According to all known laws of aviation, there is no way a bee should be able to fly. Its wings are too small to get its fat little body off the ground. The bee, of course, flies anyway, because bees don't care what humans think is impossible."
script = ExtResource("5_u5yar")
markdown_text = "According to all known laws of aviation, there is no way a bee should be able to fly. Its wings are too small to get its fat little body off the ground. The bee, of course, flies anyway, because bees don't care what humans think is impossible."
h1 = SubResource("Resource_4v1gk")
h2 = SubResource("Resource_t5nu5")
h3 = SubResource("Resource_4sg1e")
h4 = SubResource("Resource_6amxf")
h5 = SubResource("Resource_yxrjn")
h6 = SubResource("Resource_t42cg")
enable_checkbox_clicks = false

[node name="ReadMeWindow" type="Window" parent="StartScreen"]
auto_translate_mode = 1
title = "License"
initial_position = 2
size = Vector2i(800, 600)
visible = false
theme_override_constants/resize_margin = 50
script = ExtResource("12_ndxgy")

[node name="MarginContainer" type="MarginContainer" parent="StartScreen/ReadMeWindow"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10

[node name="MarkdownLabel" type="RichTextLabel" parent="StartScreen/ReadMeWindow/MarginContainer"]
layout_mode = 2
bbcode_enabled = true
text = "According to all known laws of aviation, there is no way a bee should be able to fly. Its wings are too small to get its fat little body off the ground. The bee, of course, flies anyway, because bees don't care what humans think is impossible."
script = ExtResource("5_u5yar")
markdown_text = "According to all known laws of aviation, there is no way a bee should be able to fly. Its wings are too small to get its fat little body off the ground. The bee, of course, flies anyway, because bees don't care what humans think is impossible."
h1 = SubResource("Resource_4v1gk")
h2 = SubResource("Resource_t5nu5")
h3 = SubResource("Resource_4sg1e")
h4 = SubResource("Resource_6amxf")
h5 = SubResource("Resource_yxrjn")
h6 = SubResource("Resource_t42cg")
enable_checkbox_clicks = false

[connection signal="close_requested" from="StartScreen/LicenseWindow" to="StartScreen/LicenseWindow" method="_on_close_requested"]
[connection signal="visibility_changed" from="StartScreen/LicenseWindow" to="StartScreen" method="_on_license_window_visibility_changed"]
[connection signal="close_requested" from="StartScreen/LicenseWindow/LicenseWindow" to="StartScreen/LicenseWindow/LicenseWindow" method="_on_close_requested"]
[connection signal="visibility_changed" from="StartScreen/LicenseWindow/LicenseWindow" to="StartScreen" method="_on_license_window_visibility_changed"]
[connection signal="close_requested" from="StartScreen/ReadMeWindow" to="StartScreen/ReadMeWindow" method="_on_close_requested"]
[connection signal="visibility_changed" from="StartScreen/ReadMeWindow" to="StartScreen" method="_on_license_window_visibility_changed"]
